--- a/infrastructure/development/docker-compose.yml
+++ b/infrastructure/development/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         build:
             context: services/php-base
             args:
-                MYAPP_UID: ${MYAPP_UID}
+                PROJECT_UID: ${PROJECT_UID}
         image: myapp_basephp
         command: echo 'Base php container'
         dns: 8.8.8.8
