--- a/infrastructure/docker/services/frontend/php-fpm/fpm.conf
+++ b/infrastructure/docker/services/frontend/php-fpm/fpm.conf
@@ -4,8 +4,8 @@ error_log  = /proc/self/fd/2
 daemonize  = no
 
 [www]
-user   = myapp
-group  = myapp
+user   = ${USER_NAME}
+group  = ${USER_NAME}
 listen = 127.0.0.1:9000
 pm = dynamic
 pm.max_children = 4
