--- a/infrastructure/docker/services/router/Dockerfile
+++ b/infrastructure/docker/services/router/Dockerfile
@@ -1,6 +1,6 @@
 FROM traefik:v1.4-alpine
 
 COPY traefik.toml /etc/traefik/traefik.toml
-COPY ssl /etc/ssl/myapp
+COPY certs/* /etc/ssl/certs/
 
 CMD [""]
