--- a/infrastructure/docker/services/router/traefik.toml
+++ b/infrastructure/docker/services/router/traefik.toml
@@ -5,8 +5,8 @@
   address = ":443"
     [entryPoints.https.tls]
        [[entryPoints.https.tls.certificates]]
-       CertFile = "/etc/ssl/myapp/myapp.joli-cert.pem"
-       KeyFile = "/etc/ssl/myapp/myapp.joli-key.pem"
+       CertFile = "/etc/ssl/certs/cert.pem"
+       KeyFile = "/etc/ssl/certs/key.pem"
 
 [web]
 address = ":8080"
