--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         depends_on:
             - database
         volumes:
-            - "../..:/var/www:cached"
+            - "../../app:/var/www:cached"
         labels:
             - "traefik.port=80"
             - "traefik.frontend.entryPoints=https"
@@ -51,7 +51,7 @@ services:
         depends_on:
             - database
         volumes:
-            - "../..:/home/$USER_NAME/app:cached"
+            - "../../app:/home/$USER_NAME/app:cached"
             - "~/.composer/cache:/home/$USER_NAME/.composer/cache"
         labels:
             - "traefik.enable=false"
