--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 volumes:
-    database-data: {}
+    mysql-data: {}
 
 services:
     php-base:
@@ -29,7 +29,7 @@ services:
     frontend:
         build: services/frontend
         depends_on:
-            - database
+            - mysql
         volumes:
             - "../../${PROJECT_DIRECTORY}:/var/www:cached"
         labels:
@@ -37,17 +37,17 @@ services:
             - "traefik.frontend.entryPoints=https"
             - "traefik.frontend.rule=Host:app.test"
 
-    database:
-        build: services/database
+    mysql:
+        build: services/mysql
         volumes:
-            - "database-data:/var/lib/mysql"
+            - "mysql-data:/var/lib/mysql"
         labels:
             - "traefik.enable=false"
 
     builder:
         build: services/builder
         depends_on:
-            - database
+            - mysql
         volumes:
             - "../../${PROJECT_DIRECTORY}:/home/app/app:cached"
             - "~/.composer/cache:/home/app/.composer/cache"
