Update traefik and redirect 80->443

--- a/infrastructure/docker/services/router/Dockerfile
+++ b/infrastructure/docker/services/router/Dockerfile
@@ -1,6 +1,4 @@
-FROM traefik:v1.4-alpine
+FROM traefik:v1.7
 
 COPY traefik.toml /etc/traefik/traefik.toml
 COPY certs/* /etc/ssl/certs/
-
-CMD [""]
