Open MySQL port

--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -38,3 +38,5 @@ services:
             - "mysql-data:/var/lib/mysql"
         labels:
             - "traefik.enable=false"
+        ports:
+          - 3306:3306
