--- a/infrastructure/docker/services/php-base/Dockerfile
+++ b/infrastructure/docker/services/php-base/Dockerfile
@@ -30,6 +30,7 @@ RUN apk add --no-cache \
     php7-sockets \
     php7-tokenizer \
     php7-xml \
+    php7-xmlwriter \
     php7-zip \
     pcre
 
