--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -26,7 +26,7 @@ services:
         depends_on:
             - mysql
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/var/www:cached"
+            - "../../${PROJECT_DIRECTORY}:/home/app/app:cached"
         labels:
             - "traefik.port=80"
             - "traefik.frontend.entryPoints=https"
