--- a/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
+++ b/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
 
     server {
         listen 0.0.0.0:80;
-        root /var/www/public;
+        root /home/app/app/public;
 
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
             access_log off;
