--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -18,8 +18,6 @@ services:
         #     default:
         #         aliases:
         #             - api.app.test
-        labels:
-            - "traefik.enable=false"
 
     frontend:
         build: services/frontend
@@ -28,9 +26,12 @@ services:
         volumes:
             - "../../${PROJECT_DIRECTORY}:/home/app/app:cached"
         labels:
-            - "traefik.port=80"
-            - "traefik.frontend.entryPoints=https"
-            - "traefik.frontend.rule=Host:${PROJECT_HOSTNAMES}"
+            - "traefik.enable=true"
+            - "traefik.http.routers.frontend.rule=Host(${PROJECT_HOSTNAMES})"
+            - "traefik.http.routers.frontend.tls=true"
+            - "traefik.http.routers.frontend-unsecure.rule=Host(${PROJECT_HOSTNAMES})"
+            # Comment the next line to be able to access frontend via HTTP instead of HTTPS
+            - "traefik.http.routers.frontend-unsecure.middlewares=redirect-to-https@file"
 
     postgres:
         build: services/postgres
@@ -39,5 +40,3 @@ services:
             - POSTGRES_PASSWORD=app
         volumes:
             - postgres-data:/var/lib/postgresql/data
-        labels:
-            - "traefik.enable=false"
