Renamed some var to increase the DX
And:

* EXPOSE PG port
* Added a cookbook to use ES + kibana
* Reworked the cookbook

Cleanded the README

--- a/infrastructure/docker/docker-compose.builder.yml
+++ b/infrastructure/docker/docker-compose.builder.yml
@@ -11,5 +11,5 @@ services:
         environment:
             - COMPOSER_MEMORY_LIMIT=-1
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/home/app/app:cached"
+            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
             - "~/.composer/cache:/home/app/.composer/cache"
