--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -21,12 +21,12 @@ services:
         depends_on:
             - postgres
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/home/app/app:cached"
+            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
         labels:
             - "traefik.enable=true"
-            - "traefik.http.routers.${PROJECT_NAME}-frontend.rule=Host(${PROJECT_HOSTNAMES})"
+            - "traefik.http.routers.${PROJECT_NAME}-frontend.rule=Host(${PROJECT_DOMAINS})"
             - "traefik.http.routers.${PROJECT_NAME}-frontend.tls=true"
-            - "traefik.http.routers.${PROJECT_NAME}-frontend-unsecure.rule=Host(${PROJECT_HOSTNAMES})"
+            - "traefik.http.routers.${PROJECT_NAME}-frontend-unsecure.rule=Host(${PROJECT_DOMAINS})"
             # Comment the next line to be able to access frontend via HTTP instead of HTTPS
             - "traefik.http.routers.${PROJECT_NAME}-frontend-unsecure.middlewares=redirect-to-https@file"
 
