Hide nginx & PHP versions

--- a/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
+++ b/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
@@ -13,6 +13,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     client_max_body_size 20m;
+    server_tokens off;
 
     gzip on;
     gzip_disable "msie6";
