--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,13 @@ verify_ssl = true
 [packages]
 docker-compose = ">=1.23.0"
 docker = "*"
-Fabric = ">=1.13.1,<2.0"
+invoke = ">=1.4"
 # https://github.com/docker/compose/issues/6839
-colorama = {version = ">=0.4, <1", markers = "sys_platform == 'win32'"}
+colorama = {version = ">=0.4, <1"}
 
 [requires]
 python_version = "3.7"
+
+[scripts]
+# Alias fab to invoke to avoid BC break
+fab = "invoke"
