--- a/infrastructure/docker/services/frontend/Dockerfile
+++ b/infrastructure/docker/services/frontend/Dockerfile
@@ -2,12 +2,20 @@ ARG PROJECT_NAME
 
 FROM ${PROJECT_NAME}_php-base
 
-RUN apk add --no-cache \
-    nginx \
-    php7-fpm \
-    runit
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        nginx \
+        php${PHP_VERSION}-fpm \
+        runit \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
+
+RUN useradd -s /bin/false nginx
 
 COPY etc/. /etc/
+
+RUN phpenmod app-default \
+    && phpenmod app-fpm
 
 EXPOSE 80
 
