Better configuration for PHP

--- a/infrastructure/docker/services/php-base/etc/php/7.4/mods-available/app-default.ini
+++ b/infrastructure/docker/services/php-base/etc/php/7.4/mods-available/app-default.ini
@@ -1,4 +1,27 @@
-date.timezone=Europe/Paris
-upload_max_filesize=20M
-post_max_size=20M
-memory_limit=512M
+; priority=30
+[PHP]
+short_open_tag = Off
+memory_limit = 512M
+error_reporting = E_ALL
+display_errors = On
+display_startup_errors = On
+error_log = /proc/self/fd/2
+log_errors = On
+log_errors_max_len = 0
+max_execution_time = 0
+always_populate_raw_post_data = -1
+upload_max_filesize = 20M
+post_max_size = 20M
+[Date]
+date.timezone = UTC
+[Phar]
+phar.readonly = Off
+[opcache]
+opcache.memory_consumption=256
+opcache.max_accelerated_files=20000
+realpath_cache_size=4096K
+realpath_cache_ttl=600
+opcache.error_log = /proc/self/fd/2
+[apc]
+apc.enabled=1
+apc.enable_cli=1
