--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -8,7 +8,11 @@ services:
         build: services/router
         volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
-        network_mode: "host"
+        #network_mode: "host"
+        ports:
+          - 80:80
+          - 443:443
+          - 8080:8080
 
     frontend:
         build: services/frontend
