Do no cache APT resolution

--- a/infrastructure/docker/services/php-base/Dockerfile
+++ b/infrastructure/docker/services/php-base/Dockerfile
@@ -5,14 +5,17 @@ RUN apt-get update \
         ca-certificates \
         gnupg \
     && echo "deb https://packages.sury.org/php buster main" > /etc/apt/sources.list.d/sury.list \
-    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B188E2B695BD4743 \
-    && apt-get update
+    && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys B188E2B695BD4743
 
-RUN apt-get install -y --no-install-recommends \
-        procps
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        procps \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
 ARG PHP_VERSION=7.4
-RUN apt-get install -y --no-install-recommends \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
         php${PHP_VERSION}-apcu \
         php${PHP_VERSION}-common \
         php${PHP_VERSION}-curl \
