Upgrade pip before using it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
                 name: Install Requirements
                 command: |
                     set -e
+                    pip install --upgrade pip
                     pip install --user pipenv
                     ~/.local/bin/pipenv install
             - run:
