--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -8,10 +8,7 @@ services:
         build: services/router
         volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
-        ports:
-            - 80:80
-            - 443:443
-            - 8080:8080
+        network_mode: host
 
     frontend:
         build: services/frontend
