--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         build: services/router
         volumes:
             - "/var/run/docker.sock:/var/run/docker.sock"
-        network_mode: "host"
+        network_mode: host
 
     frontend:
         build: services/frontend
