--- a/infrastructure/docker/services/frontend/Dockerfile
+++ b/infrastructure/docker/services/frontend/Dockerfile
@@ -2,6 +2,8 @@ ARG PROJECT_NAME
 
 FROM ${PROJECT_NAME}_php-base
 
+ARG PHP_VERSION
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         nginx \
@@ -13,6 +15,7 @@ RUN apt-get update \
 RUN useradd -s /bin/false nginx
 
 COPY etc/. /etc/
+COPY php-configuration /etc/php/${PHP_VERSION}
 
 RUN phpenmod app-default \
     && phpenmod app-fpm
