--- a/infrastructure/docker/services/php-base/Dockerfile
+++ b/infrastructure/docker/services/php-base/Dockerfile
@@ -13,10 +13,13 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/doc/*
 
-ARG PHP_VERSION=7.4
+ARG PHP_VERSION
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         php${PHP_VERSION}-apcu \
+        php${PHP_VERSION}-bcmath \
+        php${PHP_VERSION}-cli \
         php${PHP_VERSION}-common \
         php${PHP_VERSION}-curl \
         php${PHP_VERSION}-iconv \
@@ -34,4 +37,4 @@ RUN addgroup --gid 1000 app && \
     adduser --system --uid $USER_ID --home /home/app --shell /bin/bash app
 
 # Configuration
-COPY etc/. /etc/
+COPY php-configuration /etc/php/${PHP_VERSION}
