Use saner GA cache configuration
see https://github.com/actions/cache/blob/main/examples.md and https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows#matching-a-cache-key

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
                 uses: actions/cache@v2
                 with:
                     path: ~/.composer/cache/
-                    key: 'composer-${{ github.sha }}'
+                    key: "composer-${{ hashFiles('**/composer.lock') }}"
                     restore-keys: composer-
             -
                 name: 'Cache Pipenv'
@@ -52,10 +52,9 @@ jobs:
                     path: |
                         ~/.cache/pip
                         ~/.cache/pipenv
-                    key: "pip-pipenv-${{ hashFiles('Pipfile.lock') }}-${{ github.sha }}"
+                    key: "pip-pipenv-${{ hashFiles('**/Pipfile.lock') }}"
                     restore-keys: |
                         pip-pipenv-
-                        pip-pipenv-${{ hashFiles('Pipfile.lock') }}-
 
             # Setup
 
