--- a/infrastructure/docker/services/php-base/Dockerfile
+++ b/infrastructure/docker/services/php-base/Dockerfile
@@ -15,9 +15,10 @@ RUN apt-get update \
 
 ARG PHP_VERSION
 
+        # php${PHP_VERSION}-apcu \
+        # php${PHP_VERSION}-uuid \
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        php${PHP_VERSION}-apcu \
         php${PHP_VERSION}-bcmath \
         php${PHP_VERSION}-cli \
         php${PHP_VERSION}-common \
@@ -26,7 +27,6 @@ RUN apt-get update \
         php${PHP_VERSION}-intl \
         php${PHP_VERSION}-mbstring \
         php${PHP_VERSION}-pgsql \
-        php${PHP_VERSION}-uuid \
         php${PHP_VERSION}-xml \
         php${PHP_VERSION}-zip \
     && apt-get clean \
