Add documentation cookbook for installing redirection.io

--- a/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
+++ b/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
@@ -2,6 +2,7 @@ user      nginx;
 pid       /var/run/nginx.pid;
 daemon    off;
 error_log /proc/self/fd/2;
+include /etc/nginx/modules-enabled/*.conf;
 
 http {
     access_log /proc/self/fd/1;
