Enabled PHP FPM status page on `/php-fpm-status`

--- a/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
+++ b/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
@@ -34,6 +34,13 @@ http {
             add_header Cache-Control "no-cache";
         }
 
+        # Remove this block if you want to access to PHP FPM monitoring
+        # dashboard (on URL: /php-fpm-status). WARNING: on production, you must
+        # secure this page (by user IP address, with a password, for example)
+        location ~ ^/php-fpm-status$ {
+            deny all;
+        }
+
         location / {
             # try to serve file directly, fallback to index.php
             try_files $uri /index.php$is_args$args;
@@ -49,6 +56,10 @@ http {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param HTTPS on;
             fastcgi_param SERVER_NAME $http_host;
+            # # Uncomment if you want to use /php-fpm-status endpoint **with**
+            # # real request URI. It may have some side effects, that's why it's
+            # # commented by default
+            # fastcgi_param SCRIPT_NAME $request_uri;
         }
 
         error_log  /proc/self/fd/2;
