--- a/infrastructure/docker/services/frontend/php-configuration/fpm/php-fpm.conf
+++ b/infrastructure/docker/services/frontend/php-configuration/fpm/php-fpm.conf
@@ -13,6 +13,7 @@ pm.start_servers = 2
 pm.min_spare_servers = 2
 pm.max_spare_servers = 3
 pm.max_requests = 500
+pm.status_path = /php-fpm-status
 clear_env  = no
 request_terminate_timeout = 120s
 catch_workers_output = yes
