Fix FPM status page

--- a/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
+++ b/infrastructure/docker/services/frontend/etc/nginx/nginx.conf
@@ -39,6 +39,10 @@ http {
         # secure this page (by user IP address, with a password, for example)
         location ~ ^/php-fpm-status$ {
             deny all;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_pass 127.0.0.1:9000;
         }
 
         location / {
