--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php-version: ['7.4', '8.0', '8.1']
+                php-version: ['7.4', '8.0', '8.1', '8.2']
         runs-on: ubuntu-latest
         steps:
             -
